# sport-coach

./: .env.example
.sisyphus/run-continuation/: ses_1c8cd5cdfffeBGTSaGMTKgd3sW.json
backend/: __init__.py  agent.py  config.py  main.py  pyproject.toml
backend/services/: garmin_client.py  strava_client.py
backend/sessions/: store.py
backend/tools/: garmin_tools.py  memory_tools.py  running_tools.py  strava_tools.py
docs/superpowers/plans/: 2026-05-17-sport-coach-mvp.md
docs/superpowers/specs/: 2026-05-17-sport-coach-design.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  PaceChart.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/hooks/: useChat.ts  useDashboard.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx
